--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.4",
-	"appid": "wx3e25d8a2714c1813",
+	"appid": "wx0aa6d2faa6e11d60",
 	"projectname": "wxOutsource",
 	"debugOptions": {
 		"hidedInDevtools": []
