新增说明文档

--- a/app.json
+++ b/app.json
@@ -5,16 +5,16 @@
     "page/tabBar/mine/mine"
   ],
   "window": {
-    "navigationBarTextStyle": "black",
-    "navigationBarTitleText": "演示",
-    "navigationBarBackgroundColor": "#F8F8F8",
-    "backgroundColor": "#F8F8F8"
+    "backgroundTextStyle": "light",
+    "navigationBarBackgroundColor": "white",
+    "navigationBarTitleText": "WeChat",
+    "navigationBarTextStyle": "black"
   },
   "tabBar": {
     "color": "#7A7E83",
     "selectedColor": "#3cc51f",
     "borderStyle": "black",
-    "backgroundColor": "#ffffff",
+    "backgroundColor": "white",
     "list": [
       {
         "pagePath": "page/tabBar/home/home",
