--- a/app.json
+++ b/app.json
@@ -6,32 +6,32 @@
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "white",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarBackgroundColor": "#fff",
+    "navigationBarTitleText": "易工宝",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
     "color": "#7A7E83",
-    "selectedColor": "#3cc51f",
+    "selectedColor": "#3197fb",
     "borderStyle": "black",
-    "backgroundColor": "white",
+    "backgroundColor": "#ffffff",
     "list": [
       {
         "pagePath": "page/tabBar/home/home",
-        "iconPath": "image/icon_component.png",
-        "selectedIconPath": "image/icon_component_HL.png",
+        "iconPath": "image/icon_home.png",
+        "selectedIconPath": "image/icon_home_HL.png",
         "text": "首页"
       },
       {
         "pagePath": "page/tabBar/message/message",
-        "iconPath": "image/icon_API.png",
-        "selectedIconPath": "image/icon_API_HL.png",
+        "iconPath": "image/icon_notice.png",
+        "selectedIconPath": "image/icon_notice_HL.png",
         "text": "信息"
       },
       {
         "pagePath": "page/tabBar/mine/mine",
-        "iconPath": "image/icon_API.png",
-        "selectedIconPath": "image/icon_API_HL.png",
+        "iconPath": "image/icon_user.png",
+        "selectedIconPath": "image/icon_user_HL.png",
         "text": "我的"
       }
     ]
