--- a/app.json
+++ b/app.json
@@ -1,6 +1,10 @@
 {
   "pages": [
+    "page/tabBar/homePages/seeAttendance/seeAttendance",
     "page/tabBar/home/home",
+    "page/tabBar/homePages/vipSeeWageDetails/vipSeeWageDetails",
+    "page/tabBar/homePages/vipSeeWage/vipSeeWage",
+    "page/tabBar/homePages/vipWageDetails/vipWageDetails",
     "page/tabBar/homePages/stayworkload/stayworkload",
     "page/tabBar/homePages/stayWageConfirm/stayWageConfirm",
     "page/tabBar/homePages/attendanceCard/attendanceCard",
@@ -8,18 +12,18 @@
     "page/tabBar/homePages/wageBlockDetails/wageBlockDetails",
     "page/tabBar/homePages/attendanceProject/attendanceProject",
     "page/tabBar/homePages/attendanceDetails/attendanceDetails",
-    "page/tabBar/homePages/seeAttendance/seeAttendance",
+   
     "page/tabBar/homePages/wageDetails/wageDetails",
     "page/tabBar/message/message",
     "page/tabBar/mine/mine",
     "page/tabBar/homePages/seeWorkload/seeWorkload",
     "page/tabBar/homePages/seeTeam/seeTeam"
-   
+    
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "易工宝",
+    "navigationBarTitleText": "智工在线",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
