--- a/app.json
+++ b/app.json
@@ -1,21 +1,19 @@
 {
   "pages": [
     "page/tabBar/home/home",
+    "page/tabBar/minePages/chagePassword/chagePassword",
+    
+    "components/toast/toast",
+
+    "page/tabBar/minePages/retPassword/retPassword",
+    
+    "page/tabBar/minePages/setPassword/setPassword",
+
     "page/tabBar/minePages/personData/personData",
     
-    "page/tabBar/minePages/retPassword/retPassword",
-    "page/tabBar/minePages/chagePassword/chagePassword",
-    "page/tabBar/minePages/setPassword/setPassword",
-    
     "page/tabBar/homePages/attendanceCard/attendanceCard",
-    
     "page/tabBar/message/message",
-    
-    
-    
-   
     "page/tabBar/login/login",
-    
     "page/tabBar/minePages/setWorkWanted/setWorkWanted",
     "page/tabBar/minePages/changeWorkWanted/changeWorkWanted",
     "page/tabBar/minePages/workWanted/workWanted",
