--- a/page/tabBar/homePages/stayAttendanceProject/stayAttendanceProject.json
+++ b/page/tabBar/homePages/stayAttendanceProject/stayAttendanceProject.json
@@ -1,3 +1,6 @@
 {
-  "navigationBarTitleText": "个人考勤明细"
+  "navigationBarTitleText": "个人考勤明细",
+  "usingComponents": {
+    "template-toast": "/components/toast/toast"
+  }
 }
